[gd_scene load_steps=14 format=3 uid="uid://1x821s0twuqq"]

[ext_resource type="Script" uid="uid://dy30y1m3ckcx1" path="res://start.gd" id="1_qn1rc"]
[ext_resource type="Texture2D" uid="uid://cnrgi16timukg" path="res://sprites/start.png" id="2_1n0d2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qn1rc"]

[sub_resource type="LabelSettings" id="LabelSettings_1n0d2"]
font_size = 30
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_y5hus"]
font_size = 30
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1n0d2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1n0d2"]
bg_color = Color(0.972549, 0.709804, 0.0901961, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oiuna"]
bg_color = Color(0.692427, 0.49898, 0.0197221, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y5hus"]
bg_color = Color(0.972549, 0.709804, 0.0901961, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="LabelSettings" id="LabelSettings_qn1rc"]
font_size = 32
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qn1rc"]
bg_color = Color(0.694118, 0.498039, 0.0196078, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4a3qj"]
bg_color = Color(0.694118, 0.498039, 0.0196078, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qn1rc"]

[node name="Start" type="Node2D"]
script = ExtResource("1_qn1rc")
metadata/_edit_vertical_guides_ = [450.0]
metadata/_edit_horizontal_guides_ = [1198.0]

[node name="Hintergrund" type="Sprite2D" parent="."]
position = Vector2(960, 541)
scale = Vector2(1.00182, 0.99861)
texture = ExtResource("2_1n0d2")

[node name="Spielstand" type="Control" parent="Hintergrund"]
material = SubResource("ShaderMaterial_qn1rc")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -511.0
offset_top = 348.0
offset_right = -1510.0
offset_bottom = -607.0
grow_horizontal = 2
grow_vertical = 2

[node name="Taler" type="Label" parent="Hintergrund/Spielstand"]
layout_mode = 1
offset_right = 105.0
offset_bottom = 42.0
text = "
"
label_settings = SubResource("LabelSettings_1n0d2")

[node name="HighScores" type="Label" parent="Hintergrund/Spielstand"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -42.0
offset_right = 188.0
grow_vertical = 0
label_settings = SubResource("LabelSettings_y5hus")

[node name="Buttons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1547.0
offset_top = 427.0
offset_right = 1547.0
offset_bottom = 427.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonStart" type="Button" parent="Buttons"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 57.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_1n0d2")
theme_override_styles/hover = SubResource("StyleBoxFlat_1n0d2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_oiuna")
theme_override_styles/normal = SubResource("StyleBoxFlat_y5hus")
keep_pressed_outside = true
text = "Start"

[node name="LabelStufe" type="Label" parent="Buttons"]
layout_mode = 0
offset_left = 39.0
offset_top = 286.0
offset_right = 164.0
offset_bottom = 331.0
text = "Stufe : 1"
label_settings = SubResource("LabelSettings_qn1rc")

[node name="ButtonHilfe" type="Button" parent="Buttons"]
layout_mode = 0
offset_top = 70.0
offset_right = 200.0
offset_bottom = 127.0
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_1n0d2")
theme_override_styles/hover = SubResource("StyleBoxFlat_1n0d2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qn1rc")
theme_override_styles/normal = SubResource("StyleBoxFlat_y5hus")
keep_pressed_outside = true
text = "Hilfe
"

[node name="ButtonBeenden" type="Button" parent="Buttons"]
layout_mode = 0
offset_top = 211.0
offset_right = 200.0
offset_bottom = 268.0
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_1n0d2")
theme_override_styles/hover = SubResource("StyleBoxFlat_1n0d2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4a3qj")
theme_override_styles/normal = SubResource("StyleBoxFlat_y5hus")
keep_pressed_outside = true
text = "Beenden"

[node name="ButtonReset" type="Button" parent="Buttons"]
layout_mode = 0
offset_top = 141.0
offset_right = 200.0
offset_bottom = 198.0
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_1n0d2")
theme_override_styles/hover = SubResource("StyleBoxFlat_1n0d2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4a3qj")
theme_override_styles/normal = SubResource("StyleBoxFlat_y5hus")
keep_pressed_outside = true
text = "Reset
"

[node name="ButtonStufe1" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = -1.0
offset_top = 366.0
offset_right = 59.0
offset_bottom = 423.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_qn1rc")
theme_override_styles/hover = SubResource("StyleBoxFlat_1n0d2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4a3qj")
theme_override_styles/normal = SubResource("StyleBoxFlat_y5hus")
keep_pressed_outside = true
text = "1"

[node name="ButtonStufe2" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 69.0
offset_top = 364.0
offset_right = 129.0
offset_bottom = 421.0
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_1n0d2")
theme_override_styles/hover = SubResource("StyleBoxFlat_1n0d2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4a3qj")
theme_override_styles/normal = SubResource("StyleBoxFlat_y5hus")
keep_pressed_outside = true
text = "2"

[node name="ButtonStufe3" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 140.0
offset_top = 364.0
offset_right = 200.0
offset_bottom = 421.0
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_1n0d2")
theme_override_styles/hover = SubResource("StyleBoxFlat_1n0d2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4a3qj")
theme_override_styles/normal = SubResource("StyleBoxFlat_y5hus")
keep_pressed_outside = true
text = "3"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Buttons/ButtonStart" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="Buttons/ButtonHilfe" to="." method="_on_button_hilfe_pressed"]
[connection signal="pressed" from="Buttons/ButtonBeenden" to="." method="_on_button_beenden_pressed"]
[connection signal="pressed" from="Buttons/ButtonReset" to="." method="_on_button_reset_pressed"]
[connection signal="pressed" from="Buttons/ButtonStufe1" to="." method="_on_button_stufe_1_pressed"]
[connection signal="pressed" from="Buttons/ButtonStufe2" to="." method="_on_button_stufe_2_pressed"]
[connection signal="pressed" from="Buttons/ButtonStufe3" to="." method="_on_button_stufe_3_pressed"]
